# fast_parser

./: .gitignore  AI_AGENT_GUIDE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compila_lib.sh
.github/workflows/: ci.yml  publish-javaswing-nuget.yml  publish-javaswing-pypi.yml  release.yml
bindings/csharp/: README.md
bindings/csharp/FastParse/: FastParse.csproj  FastParseBinaryChild.cs  FastParseBinaryDocument.cs  FastParseBinaryNode.cs  FastParseClient.cs  FastParseException.cs  FastParseField.cs  FastParseFormat.cs  FastParseMessagePack.cs  FastParseNormalization.cs  LanguageExtensionLoadResult.cs  ParseOptions.cs  ParseResult.cs  ParseSummary.cs  QueryOptions.cs
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/fastparse/: __init__.py  _version.py
bindings/python/tsmp/: __init__.py  binary.py  native.py
docs/: ai_agent_integration.md  benchmarks.md  binary_schema.md  bindings.md  c_api.md  contracts.md  csharp_binding.md  dotnet_java_ai_agent_quickstart.md  encoding.md  github_publish.md  grammar_standard.md  java_inventory.md  language_extensions.md  languages.md  naming.md  next-grammar-family-roadmap.md  output_formats.md  package_registry_setup.md  packaging.md  platforms.md  python_binding.md  release_checklist.md  tree_sitter_queries.md  versioning.md
examples/: README.md
examples/c/: parse_string.c
examples/csharp/01_parse_string/: Program.cs
examples/csharp/02_binary_decode/: Program.cs
examples/csharp/03_inventory_to_sqlite/: FastParse.InventoryToSqliteExample.csproj  Program.cs
examples/csharp/04_query/: FastParse.QueryExample.csproj  Program.cs
examples/csharp/nuget/01_parse_string/: FastParser.NuGetParseString.csproj  Program.cs
examples/csharp/nuget/02_binary_decode/: FastParser.NuGetBinaryDecode.csproj  Program.cs
examples/python/01_parse_string/: parse_string.py
examples/python/02_bulk_probe/: bulk_probe.py
examples/python/03_binary_decode/: binary_decode.py
examples/python/04_inventory_to_sqlite/: inventory_to_sqlite.py
examples/python/05_diagnostics_scan/: diagnostics_scan.py
examples/python/06_query/: query_java.py
exports/: tsmp_linux.map  tsmp_macos.exports
extensions/cobol/: fastparse_language_cobol.c
extensions/java-frameworks/: README.md  RELEASE.md  RELEASE_VALIDATION.md  USAGE.md  fastparse_language_java_frameworks.c  manifest.json
extensions/java-frameworks/queries/: frameworks.scm
extensions/javaswing/: README.md  RELEASE.md  fastparse_language_javaswing.c  manifest.json
extensions/python/: README.md  fastparse_language_python.c  manifest.json
extensions/rust/: README.md  fastparse_language_rust.c  manifest.json
file_test/java/: HelloWorld.java
grammars/tree-sitter-java-frameworks/: .gitignore  .npmignore  Cargo.toml  PROMOTION.md  PROMOTION_SHA256SUMS.txt  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
grammars/tree-sitter-java-frameworks/.github/workflows/: ci.yml
grammars/tree-sitter-java-frameworks/bindings/c/: tree-sitter-java-frameworks.pc.in
grammars/tree-sitter-java-frameworks/bindings/go/: binding.go  binding_test.go
grammars/tree-sitter-java-frameworks/bindings/node/: binding.cc  index.js
grammars/tree-sitter-java-frameworks/bindings/python/tests/: test_binding.py
grammars/tree-sitter-java-frameworks/bindings/python/tree_sitter_java_frameworks/: __init__.py  binding.c
grammars/tree-sitter-java-frameworks/bindings/rust/: build.rs  lib.rs
grammars/tree-sitter-java-frameworks/bindings/swift/TreeSitterJavaFrameworks/: java_frameworks.h
grammars/tree-sitter-java-frameworks/bindings/swift/TreeSitterJavaFrameworksTests/: TreeSitterJavaFrameworksTests.swift
grammars/tree-sitter-java-frameworks/docs/: README.md  validation.md
grammars/tree-sitter-java-frameworks/docs/rule-catalogs/: framework_query_families.md  framework_support_matrix.md  framework_usage_evidence.md
grammars/tree-sitter-java-frameworks/queries/: highlights.scm  injections.scm
grammars/tree-sitter-java-frameworks/src/: grammar.json  node-types.json  parser.c
grammars/tree-sitter-java-frameworks/test/corpus/: framework_extended_annotations.txt  framework_library_imports.txt  framework_modern_and_negative_annotations.txt  framework_usage_evidence.txt  java_frameworks_smoke.txt
grammars/tree-sitter-java-frameworks/tools/: audit_framework_false_negatives.py  audit_framework_queries.py  validate_fastparse_extension.py  validate_framework_inventory.py
include/: fastparse.h  tsmp.h
scripts/: package_language_extension.py  package_nuget.py  package_nuget_language_extension.py  package_python_language_wheel.py  package_python_wheel.py  package_release.py  validate_nuget_language_package.py  validate_nuget_package.py  validate_published_nuget.py  validate_published_nuget_language.py  validate_published_pypi.py  validate_published_pypi_language.py  validate_python_language_wheel.py  validate_python_wheel.py  validate_release_package.py
src/: tsmp_api.c  tsmp_buffer.c  tsmp_buffer.h  tsmp_languages.c  tsmp_languages.h  tsmp_query.c  tsmp_render.c  tsmp_render.h  tsmp_render_binary.c  tsmp_render_csv.c  tsmp_render_json.c
tests/: c_extension_smoke.c  c_smoke.c  test_tsmp_contract.py
tests/csharp/FastParse.Tests/: FastParse.Tests.csproj  FastParseClientTests.cs
tests/fixtures/: test_language_extension.c
tools/: benchmark_tsmp_formats.py  expand_binary_ast_nodes_sqlite.py  inventory_java_sqlite.py  parse_inventory_binary_sqlite.py  parse_inventory_with_tsmp.py
