[package]
name = "tree-sitter-java-frameworks"
description = "Java framework-detection grammar for tree-sitter"
version = "0.1.0"
repository = "https://github.com/natan-sysview/fast_parser"
homepage = "https://github.com/natan-sysview/fast_parser/tree/main/grammars/tree-sitter-java-frameworks"
authors = [
  "Ayman Nadeem <aymannadeem@github.com>",
  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
  "Amaan Qureshi <amaanq12@gmail.com>",
]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "java", "frameworks"]
categories = ["parsing", "text-editors"]
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["LICENSE", "bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.25"
